# StrategyNotes

./: .gitignore  AGENTS.md  AGENT_STATE.md  CHANGELOG.md  CONFORMANCE.md  Cargo.toml  EVIDENCE.md  FINISH_LINE_PLAN.md  KNOWN_LIMITATIONS.md  OPEN_QUESTIONS.md  PLAN.md  README.md  SPEC.md  justfile  package.json  pnpm-lock.yaml
.agents/: evidence.md  open_questions.md
.agents/plan/: DEV_PLAN_TEMPLATE.md  audit.md  remediation-plan.md  source-design-issues.md
.agents/plans/: editor-screen.md  editor-tasks.md  finish-line.md  gap-traces.md  graph-unification.md  notes-feature.md  notes-tasks.md
.agents/specs/: SPEC.md  Strategy_Framework_tread.md
.omc/sessions/: d2c5db02-9d85-4773-9644-2c092f59322c.json
.serena/: project.yml
adapters/: Cargo.toml
adapters/src/: calendar.rs  daynote_sink.rs  lib.rs  markdown_vault.rs  sqlite_index.rs  trivial.rs
adapters/tests/: agent_http.rs  body_index.rs  calendar.rs  daynote_sink.rs  markdown_vault.rs  search.rs  seed.rs  sqlite_index.rs  vertical_slice.rs  vrd.rs
calendar/: Cargo.toml
calendar/src/: ics_import.rs  lib.rs  model.rs  secrets.rs  sync.rs  sync_store.rs
calendar/src/providers/: caldav.rs  google.rs  http.rs  microsoft.rs  mock.rs  mod.rs  reqwest_transport.rs
calendar/tests/: foundation.rs  providers.rs  sync_engine.rs
core/: Cargo.toml
core/src/: agent_rules.rs  body.rs  calendar.rs  capacity.rs  case_lifecycle.rs  error.rs  evidence.rs  evidence_rules.rs  execution.rs  format.rs  gate.rs  gates.rs  governance.rs  graph.rs  ics.rs  identity.rs  lib.rs  naming.rs  node.rs  ports.rs  search.rs  seed.rs  services.rs  strategy.rs  time.rs  trace.rs  views.rs  vrd.rs
core/src/seed/: documents.rs  execution.rs  notes.rs  reality.rs  strategy.rs  support.rs  value.rs
core/tests/: body.rs  case_domain.rs  contracts.rs  gates.rs  graph.rs  smoke.rs  storage.rs  trace.rs
server/: Cargo.toml
server/src/: http.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.txt
src-tauri/src/: main.rs
strategynotes-data/: index.db
strategynotes-data/daynotes/: 2026-06-22.md
strategynotes-data/vault/: 01KVQGDFWQJQJ30X4E4WC6HVES.md  01KVQGDXG1R5YPCACWC9DSM4RJ.md
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.test.tsx  App.tsx  api.ts  atoms.tsx  index.css  main.tsx  organisms.test.tsx  organisms.tsx
ui/src/components/editor/: BlockRefMenu.tsx  CalloutBlock.tsx  CloneSection.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ContextPanel.tsx  CoreConceptsSection.tsx  EdgeLinker.tsx  EditorHeader.tsx  LinkedSection.tsx  MentionAutocomplete.tsx  NoteEditor.test.tsx  NoteEditor.tsx  ProofBurdenPanel.tsx  QuickActionsSection.tsx  TypeSelector.tsx  editor.test.ts
ui/src/components/journal/: JournalDateNav.tsx
ui/src/components/layout/: CaseSelector.tsx  NewPageButton.tsx  Sidebar.tsx
ui/src/components/notes/: index.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  tabs.tsx
ui/src/editor/: block.test.ts  block.ts  port.test.tsx  port.ts  tokens.test.ts  tokens.ts
ui/src/editor/adapters/: CodeMirrorSurface.tsx  TextareaSurface.tsx
ui/src/hooks/: useKeyboardShortcuts.tsx  useNotes.ts  useTypedNodes.test.ts  useTypedNodes.ts
ui/src/lib/: node.test.ts  node.ts  okf.test.ts  okf.ts
ui/src/views/: DocBrowser.tsx  EditorLayout.tsx  GeneratedDoc.test.tsx  GeneratedDoc.tsx  JournalView.tsx  NotesScreen.tsx  docSpecs.ts
