[package]
name = "strategynotes-server"
version = "0.0.0"
edition = "2021"
description = "StrategyNotes driving layer: CLI + HTTP server exposing the App services."
publish = false

[[bin]]
name = "strategynotes"
path = "src/main.rs"

[dependencies]
strategynotes-core = { path = "../core" }
strategynotes-adapters = { path = "../adapters" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
